<resources>
    <string name="app_name">Plan2Meet</string>
    <string name="calendar">Calendar</string>
    <string name="groups">groups</string>
    <string name="contacts">contacts</string>
    <string name="open_sidebar">open_sidebar</string>
    <string name="sign_in">sign_in</string>
    <string name="top_header_text">June</string>
    <string name="calendar_month_text">calendar_month_text</string>
    <string name="down_arrow">down_arrow</string>
    <string name="add">add</string>
    <string name="active_bar">active_bar</string>
    <string name="todays_availability">Today\'s Availability</string>
    <string name="no_events_text">No availability scheduled today</string>
    <string name="set_availaiblity_text">Set Availability</string>
    <string name="header_bar">header_bar</string>
    <string name="add_availability_button">add_button</string>
    <string name="contact_name">Contact Name</string>
    <string name="group_name">Group Name</string>
    <string name="calendar_fragment">Calendar Fragment</string>
    <string name="groups_fragment">Groups Fragment</string>
    <string name="contacts_fragment">Contacts Fragment</string>
    <string name="add_availability">Add Availability</string>
    <string name="groups_page_title">Groups</string>
    <string name="contacts_title">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>