<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.plan2meet.fragments.MainFragment">

    <Spinner
        android:id="@+id/group_selection_spinner"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="350dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/add"
        app:srcCompat="@drawable/add"
        tools:ignore="ImageContrastCheck" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="410dp"
        android:layout_height="350dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:background="@color/app_purple"
        android:dateTextAppearance="@style/CalendarViewDateCustomText"
        android:theme="@style/CalendarViewCustom"
        android:weekDayTextAppearance="@style/CalendarViewWeekCustomText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="170dp"
        android:singleLine="true"
        android:text="@string/todays_availability"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="130dp"
        android:minWidth="250dp"
        android:text="@string/no_events_text"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintVertical_bias="0.061" />


    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="455dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/header_bar"
        android:maxWidth="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153"
        app:srcCompat="@drawable/rectangle" />


    <Button
        android:id="@+id/add_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="530dp"
        android:layout_marginEnd="103dp"
        android:backgroundTint="@color/app_purple"
        android:maxWidth="500dp"
        android:singleLine="true"
        android:text="@string/add_availability"
        android:textSize="12sp"
        app:icon="@drawable/add"
        app:iconSize="25dp" />

</RelativeLayout>