<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_purple"
    tools:context="com.plan2meet.ui.EditGroup">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="2dp"
        android:text="Edit Group"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="538dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rect" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="216dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rect" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="484dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rect" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="220dp"
        android:layout_height="2dp"
        android:layout_marginBottom="376dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:srcCompat="@drawable/rect"
        tools:layout_editor_absoluteX="95dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="2dp"
        android:text="Group Name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="2dp"
        android:text="Group Image"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="2dp"
        android:text="Group Members"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="@color/nav_green"
        android:text="Save"
        app:cornerRadius="30px"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/nav_green" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/app_red"
        android:text="Cancel"
        app:cornerRadius="30px"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/nav_green" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="412dp"
        android:layout_height="70dp"
        android:layout_marginBottom="1dp"
        android:background="@color/nav_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="110dp"
            android:layout_marginStart="95dp"
            android:layout_marginTop="-20dp"
            android:contentDescription="@string/calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/calendar"
            tools:layout_editor_absoluteY="8dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="110dp"
            android:layout_marginStart="195dp"
            android:layout_marginTop="-20dp"
            android:contentDescription="@string/groups"
            app:srcCompat="@drawable/user_group" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="110dp"
            android:layout_marginStart="295dp"
            android:layout_marginTop="-20dp"
            android:contentDescription="@string/contacts"
            app:srcCompat="@drawable/contact_book" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="82dp"
            android:layout_marginTop="65dp"
            android:contentDescription="@string/active_bar"
            app:srcCompat="@drawable/active"
            tools:ignore="ImageContrastCheck" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="412dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/open_sidebar"
            app:srcCompat="@drawable/open_sidebar"
            tools:ignore="ImageContrastCheck" />


        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="290dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/add"
            app:srcCompat="@drawable/add"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="30dp"
            android:text="Contacts"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />

            </com.google.android.material.navigation.NavigationView>

        </androidx.constraintlayout.widget.ConstraintLayout>